$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.14-3 (opened June 5, 2008)

        * rda.default, cca.default: vegan naively used only the rank of
        the ordination, but indeed, there are three cases of ranks: rank
        of the ordination or number of axes (returned as rank like
        before), rank of the constraints after conditions (now returned as
        qrank), rank of conditions + constraints (returned in QR$rank).
        When only 'rank' was used, vegan for instance aliased terms beyond
        rank of ordination axes, extractAIC did not get df right when
        going beyond rank of ordination, anova(..., by="t") gave zero df
        for constraints beyond rank of ordination, and calibrate.cca
        ignored those extra variables (now stops). In addition predict.cca
        and predict.rda(..., type="lc", newdata=somedata) gave wrong
        results in partial model.  The following changes were made if
        necessary to cca/rda support functions:

	* alias.cca: QR$rank
	* anova.ccabyaxis: OK 
	* bstick.cca: OK 
	* calibrate.cca: stop with error if qrank > rank
	* extractAIC: qrank
	* mso: OK (HW confirms)
	* msoplot: OK (HW cofirms)
	* permutest.cca: qrank, also fixes anova.ccabyterm
	* predict.cca/rda: QR$rank with type = "lc" & newdata
	* summary.cca/rda: OK
	* scores.cca/rda: OK
	
Version 1.14-2 (closed June 5, 2008)

	* Helene Wagner joined the vegan team.

	* mso: automatically collapses distance classes larger than half
	the maximum distance into a single distance class.

	* mso: plot.mso renamed to msoplot so that plot.cca also works,
	and the example uses now Oribatid mite data set. 

	* mso: gained a print method that also shows the variogram
	(Helene, please check this!), and mso knows about its own call. 

	* lines.spantree: did not pass graphical arguments to lines
	(broken in 1.12-15).

	* ade2vegancca: a new function which tries to change an ade4:::cca